# stream_recognizer

./: .gitignore  HEAP_MEMORY_SERIAL_ALLOCATION_FIX.md  LINE_BY_LINE_CORRECTION_GUIDE.md  README.md  SILERO_VAD_INTEGRATION_GUIDE.md  THREAD_OPTIMIZATION_SUMMARY.md  build_rnnoise_windows.ps1  compile_test.bat  config.json  config_optimized.json  fix_ptrace_issue.sh  input_mode_fix_verification.bat  manual_rnnoise_setup.md  moc.bat  resources.qrc  setup_silero_vad.bat  stream_recognizer.sln  stream_recognizer.vcxproj  stream_recognizer.vcxproj.filters  test_delay_fix.md  test_multi_channel.bat  test_multi_channel_client.py  test_precise_recognition.md  vad_fix_patch.cpp  vad_tuning_tool.cpp  whisper_gui.h
deploy/: deepseek_vllm_config.py
docs/: adaptive_audio_extraction.md  audio_preprocessing_debug.md  audio_preprocessing_logging_optimization.md  comprehensive_memory_safety_fix.md  improvements_summary.md  memory_safety_fix.md  noise_suppression_control.md  noise_suppression_unified_control.md  noise_suppressor_initialization_fix.md  rnnoise_16k_adaptation_guide.md  rnnoise_over_suppression_fix.md  vad_logging_optimization.md  vad_threshold_optimization.md
include/: audio_capture.h  audio_handlers.h  audio_preprocessor.h  audio_processor.h  audio_processor.h.bak  audio_queue.h  audio_types.h  audio_utils.h  config_manager.h  loading_dialog.h  log_utils.h  memory_serializer.h  multi_channel_processor.h  output_corrector.h  parallel_openai_processor.h  realtime_segment_handler.h  result_merger.h  segment_handler.h  silero_vad_detector.h  subtitle_manager.h  voice_activity_detector.h  whisper_gui.h
lib/: fvad.lib  whisper.lib
libfvad-1.0/: CMakeLists.txt  Makefile.in  configure
libfvad-1.0/examples/: Makefile.in
libfvad-1.0/src/: Makefile.in
libfvad-1.0/tests/: Makefile.in
recognizer_server/: CMakeLists.txt  CUDA_MEMORY_ISSUE_SOLUTION.md  apply_cuda_fix.bat  apply_cuda_fix.sh  build.sh  config.json  cuda_memory_pool_fix.patch  readme.md  start_server.bat  start_server.sh
recognizer_server/include/: cuda_memory_manager.h  file_handler.h  recognition_service.h
recognizer_server/src/: cuda_memory_manager.cpp  cuda_override.h  fattn_dummy.cu  file_handler.cpp  main.cpp  recognition_service.cpp
server/: README.md  config_example.yaml  requirements.txt  setup_environment.sh  whisper_lora_finetune.py
src/: audio_capture.cpp  audio_handlers.cpp  audio_preprocessor.cpp  audio_processor.cpp  audio_queue.cpp  config_manager.cpp  loading_dialog.cpp  log_utils.cpp  memory_serializer.cpp  moc_audio_capture.cpp  moc_audio_processor.cpp  moc_loading_dialog.cpp  moc_multi_channel_processor.cpp  moc_output_corrector.cpp  moc_parallel_openai_processor.cpp  moc_realtime_segment_handler.cpp  moc_result_merger.cpp  moc_subtitle_manager.cpp  moc_voice_activity_detector.cpp  moc_whisper_gui.cpp  multi_channel_processor.cpp  openai_fullaudio.py  output_corrector.cpp  parallel_openai_processor.cpp  realtime_segment_handler.cpp  recognizer.cpp  result_merger.cpp  result_queue.cpp  segment_handler.cpp  silero_vad_detector.cpp  stream_recognizer.cpp  subtitle_manager.cpp  test_compile.cpp  translator.cpp  voice_activity_detector.cpp  whisper_gui.cpp
subtitle_wer_tool/: OCR死锁问题修复报告.md  README.md  debug_ocr_deadlock.py  fixed_paddleocr_extractor.py  improved_paddleocr_extractor.py  install_paddleocr_stable.py  paddleocr_v3_stable.py  start_subtitle_wer_gui.bat  start_subtitle_wer_gui.py  subtitle_wer_gui.py  项目整理完成报告.md
subtitle_wer_tool/archive/: 归档说明.md
subtitle_wer_tool/archive/deprecated_scripts/: debug_ocr_detailed.py  optimized_black_subtitle.py  quick_test_black_bg.py  tesseract_extractor.py  tesseract_subtitle_extractor.py
subtitle_wer_tool/archive/test_scripts/: quick_gpu_test.py  simple_ocr_test.py  simple_test_fix.py  test_paddleocr_gpu.py  test_paddleocr_integrated.py  test_paddleocr_simple.py
subtitle_wer_tool/docs/: PaddleOCR_3.0.0_稳定版升级指南.md  PaddleOCR_参数化整合完成说明.md  README_WER_TOOL.md
subtitle_wer_tool/scripts/: run_gui.bat  run_gui.sh
subtitle_wer_tool/tools/installers/: install_advanced_tools.py  install_paddleocr.bat  install_paddleocr.py
subtitle_wer_tool/tools/ocr/: advanced_ocr_extractor.py  improved_ocr_extractor.py  video_ocr_extractor.py
subtitle_wer_tool/tools/subtitle_wer/: advanced_subtitle_extractor.py  subtitle_wer_gui.py  subtitle_wer_tool.py
subtitle_wer_tool/tools/tests/: test_improved_ocr.py  test_subtitle_wer_tool.py
temp_files_backup/: temp_create.py  清理日志.md
tools/vad/: export_silero_vad.py
